# Splatted

./: Cargo.toml  LICENSE  README.md
src/: client.rs  main.rs  protocol_version.rs  server_info.rs  utils.rs
src/errors/: mod.rs  wrong_packet_error.rs
src/network/: cipher.rs  connection.rs  mod.rs
src/packets/: mod.rs  packet0_keep_alive.rs  packet103_set_slot.rs  packet104_window_items.rs  packet10_flying.rs  packet11_player_position.rs  packet12_player_look.rs  packet130_update_sign.rs  packet132_tile_entity_data.rs  packet13_player_look_move.rs  packet16_block_item_switch.rs  packet18_animation.rs  packet1_login.rs  packet200_statistic.rs  packet201_player_info.rs  packet202_player_abilities.rs  packet204_client_info.rs  packet205_client_command.rs  packet20_named_entity_spawn.rs  packet21_pickup_spawn.rs  packet22_collect.rs  packet23_vehicle_spawn.rs  packet23_vehicule_spawn.rs  packet24_mob_spawn.rs  packet250_custom_payload.rs  packet252_shared_key.rs  packet253_server_auth_data.rs  packet254_server_ping.rs  packet255_kick_disconnect.rs  packet25_entity_painting.rs  packet26_entity_exp_orb.rs  packet28_entity_velocity.rs  packet29_destroy_entity.rs  packet2_client_protocol.rs  packet30_entity.rs  packet31_rel_entity_move.rs  packet32_entity_look.rs  packet33_rel_entity_move_look.rs  packet34_entity_teleport.rs  packet35_entity_head_rotation.rs  (+27 more)
src/packets/io/: mod.rs  read.rs  write.rs
src/packets/types/: attach_state.rs  attribute_key.rs  destroy_stage.rs  dimension_type.rs  entity_animation.rs  entity_metadata.rs  entity_status.rs  entity_type.rs  (+11 more)
