[package]
authors = ["ht06"]
license = "MIT"
name = "Splatted"
readme = "README.md"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.29"
simplelog = "0.12.2"
rsa = "0.9.10"
rand = "0.8.5"
aes = "0.9.0"
cfb8 = "0.9.0"
bytes = "1.11.1"
